--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,22 @@ main {
     padding: 50px;
     border-radius: 15px;
     box-shadow: 0 0 1px 2px;
-    height: 60vh;
+    height: 35vh;
+}
+
+#quiz-end-message{
+    text-align: center;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #124e66;
+    padding: 20px;
+    max-width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    color: #ffffff;
+    font-size: 20px;
+    border: 2px solid black;
 }
 
 .btn-grid{
